Fix typos in quickstart

--- a/docs/quickstart.asciidoc
+++ b/docs/quickstart.asciidoc
@@ -71,9 +71,9 @@ Alright, let's go ahead and delete the document that we added previously:
 
 ----
 $deleteParams = array();
-$deleteParams['index'] = $params['my_index'];
-$deleteParams['type'] = $params['my_type'];
-$deleteParams['id'] = $params['my_id'];
+$deleteParams['index'] = 'my_index';
+$deleteParams['type'] = 'my_type';
+$deleteParams['id'] = 'my_id';
 $retDelete = $client->delete($deleteParams);
 ----
 
@@ -82,7 +82,7 @@ $retDelete = $client->delete($deleteParams);
 Due to the dynamic nature of elasticsearch, the first document we added automatically built an index with some default settings.  Let's delete that index because we want to specify our own settings later:
 
 ----
-$deleteParams['index'] = $indexParams['my_index'];
+$deleteParams['index'] = 'my_index';
 $client->indices()->delete($deleteParams);
 ----
 
