--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1,7 +1,7 @@
 
 == Configuration
 
-Almost every aspect of the client is configurable.  The client is built around [Pimple](http://pimple.sensiolabs.org/), a light-weight dependency injection container.  Most users will only need to configure a few parameters to suit their needs.
+Almost every aspect of the client is configurable.  The client is built around http://pimple.sensiolabs.org/:[Pimple] a light-weight dependency injection container.  Most users will only need to configure a few parameters to suit their needs.
 
 However, since the container also controls all object instantiation, it is possible for users to completely change the internal components used by the client.  A user could, for example, write a custom ConnectionPool class and use that instead of the default connection pools that ship with the client
 
@@ -13,7 +13,7 @@ All configurations (both simple parameters and more advanced component-replaceme
 
 The client accepts an array of hosts that you would like to connect to.  Each value in the array must be a string (either with or without the port number):
 
-
+[source,php]
 ----
 $params = array();
 $params['hosts'] = array (
@@ -31,26 +31,31 @@ This associative array holds all custom configurations that you may want to set.
 === Example: Configuring the Logger
 Let's change the logging location.  By default, the client will log to a file called 'elasticsearch.log' in the root of your project.  To change this location, simply do the following:
 
+[source,php]
 ----
 $params = array();
 $params['logPath'] = '/var/logs/elasticsearch/elasticsearch.log';
 
 $client = new Elasticsearch\Client($params);
 ----
+{zwsp} +
 
 Not all parameters all strings.  For example, we can change the logging level of the client (defaults to WARN):
 
+[source,php]
 ----
 $params = array();
 $params['logPath']  = '/var/logs/elasticsearch/elasticsearch.log';
 $params['logLevel'] = \Monolog\Logger::INFO;
 $client = new Elasticsearch\Client($params);
 ----
+{zwsp} +
 
-Easy, right?  Let's get a little more complicated and specify a custom logger.  By default, the client uses a file-based logger.  But since the logging library is [Monolog](https://github.com/Seldaek/monolog), we have access to a variety of loggers.
+Easy, right?  Let's get a little more complicated and specify a custom logger.  By default, the client uses a file-based logger.  But since the logging library is https://github.com/Seldaek/monolog:[Monolog], we have access to a variety of loggers.
 
 Let's log to the SysLog instead of a file:
 
+[source,php]
 ----
 use Monolog\Logger;
 
@@ -66,6 +71,7 @@ $log->pushProcessor($processor);
 $params['logObject'] = $log;
 $client = new Elasticsearch\Client($params);
 ----
+{zwsp} +
 
 === Example: Configuring the Selector Class
 When we changed the logger object, we provided a complete object that we wanted to over-ride the default with.  There are many configurations where this won't work.  For example, the Connection class must be instantiated repeatedly when new connections are made.
@@ -76,15 +82,18 @@ Let's configure the Selector class.  By default, the client uses a Round-Robin s
 
 Let's change it to a different Selector - the RandomSelector:
 
+[source,php]
 ----
 $params['selectorClass'] = '\Elasticsearch\ConnectionPool\Selectors\RandomSelector';
 $client = new Elasticsearch\Client($params);
 ----
+{zwsp} +
 
 The client will now query random nodes.  Let's go one step further and define our own selector, using custom business logic that is specific to your domain.  Most configurable components in the client adhere to an interface, which makes it easy to swap them out for your own class.
 
 Let's make a selector that only chooses the first connection.  This is obviously not a good selector (!!!), but it demonstrates the concept well:
 
+[source,php]
 ----
 namespace MyProject\Selectors;
 
@@ -108,13 +117,16 @@ class FirstSelector implements SelectorInterface
 
 }
 ----
+{zwsp} +
 
 And now we can specify that when creating the client:
 
+[source,php]
 ----
 $params['selectorClass'] = '\MyProject\Selectors\FirstSelector';
 $client = new Elasticsearch\Client($params);
 ----
+{zwsp} +
 
 === Full list of configurations
 
@@ -133,7 +145,7 @@ $client = new Elasticsearch\Client($params);
 |logPath | 'elasticsearch.log'
 |logLevel | Logger::WARNING
 |traceObject | null
-|tracePath | elasticsearch.log'
+|tracePath | 'elasticsearch.log'
 |traceLevel | Logger::WARNING
 |guzzleOptions | array()
 |connectionPoolParams | array()
