Fix composer namespace and broken link
Proper package is elasticsearch/elasticsearch.  Also fixes
broken link at the bottom of the installation doc.

Closes elasticsearch/elasticsearch#3866

--- a/docs/installation.asciidoc
+++ b/docs/installation.asciidoc
@@ -39,4 +39,4 @@ require 'vendor/autoload.php';
 $client = new Elasticsearch\Client();
 --------------------------
 
-More information about http://getcomposer.org/:[Composer can be found at their website].
+More information about http://getcomposer.org/[Composer can be found at their website].
