--- a/docs/installation.asciidoc
+++ b/docs/installation.asciidoc
@@ -7,7 +7,23 @@ Elasticsearch-php only has a three requirements that you need to worry about:
 * http://getcomposer.org[Composer]
 * http://php.net/manual/en/book.curl.php[ext-curl]: the Libcurl extension for PHP
 
-The rest of the dependencies will automatically be downloaded and installed by Composer.  Composer is a package and dependency manager for PHP.  Installing elasticsearch-php with Composer is very easy:
+The rest of the dependencies will automatically be downloaded and installed by Composer.  Composer is a package and dependency manager for PHP.  Installing elasticsearch-php with Composer is very easy
+
+== Version Matrix
+
+Since there are breaking changes in Elasticsearch 1.0, you need to match your version of Elasticsearch to the appropriate version of this library.
+The master branch will always track Elasticsearch master.  Once 1.0.GA is released, a distinct 1.0 branch will be created to track Elasticsearch
+1.* releases.
+
+.Version Matrix
+[options="header"]
+|===================================================
+| Elasticsearch Version | Elasticsearch-PHP Branch |
+| --------------------- | ------------------------ |
+| >= 1.0                | dev-master               |
+| <= 0.90.*             | 0.4                      |
+====================================================
+
 
 === Composer Installation
 
@@ -27,7 +43,7 @@ The rest of the dependencies will automatically be downloaded and installed by C
 [source,shell]
 --------------------------
 curl -s http://getcomposer.org/installer | php
-php composer.phar install
+php composer.phar install --no-dev
 --------------------------
 
 * Finally, include the generated autoloader in your main project.  If your project is already based on Composer, the autoloader is likely already included somewhere and you don't need to add it again.  Finally, instantiate a new client:
@@ -40,3 +56,13 @@ $client = new Elasticsearch\Client();
 --------------------------
 
 More information about http://getcomposer.org/[Composer can be found at their website].
+
+=== --no-dev flag
+You'll notice that the installation command specified `--no-dev`.  This prevents Composer
+from installing the various testing and development dependencies.  For average users, there
+is no need to install the test suite.  In particular, the development dependencies include
+a full copy of Elasticsearch so that tests can be run against the REST specifications  This
+is a rather large download for non-developers, hence the --no-dev flag
+
+If you wish to contribute to development of this library, just omit the `--no-dev` flag to
+be able to run tests.
