--- a/docs/php-version-requirement.asciidoc
+++ b/docs/php-version-requirement.asciidoc
@@ -1,3 +1,5 @@
+== PHP Version Requirement
+
 Elasticsearch-php requires PHP version 5.3.9 or higher.  There are two bugs in PHP
 below 5.3.9 which cause problems for this library.
 
