--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -16,3 +16,5 @@ include::indexing-operations.asciidoc[]
 include::search-operations.asciidoc[]
 
 include::connection-pool.asciidoc[]
+
+include::php-version-requirement.asciidoc[]
