Add documentation about serializers

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -19,4 +19,6 @@ include::namespaces.asciidoc[]
 
 include::connection-pool.asciidoc[]
 
+include::serializers.asciidoc[]
+
 include::php-version-requirement.asciidoc[]
