Update default configuration list

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -238,7 +238,7 @@ $paramDefaults = array(
     'connectionFactoryClass'=> '\Elasticsearch\Connections\ConnectionFactory',
     'connectionPoolClass'   => '\Elasticsearch\ConnectionPool\StaticNoPingConnectionPool',
     'selectorClass'         => '\Elasticsearch\ConnectionPool\Selectors\RoundRobinSelector',
-    'serializerClass'       => '\Elasticsearch\Serializers\ArrayToJSONSerializer',
+    'serializerClass'       => '\Elasticsearch\Serializers\SmartSerializer',
     'sniffOnStart'          => false,
     'connectionParams'      => array(),
     'logging'               => false,
